--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="interior.css">
+    <link rel="stylesheet" href="dist/interior.css">
     <title>비블리오테카 바가텔에 오신것을 환영합니다.</title>
 </head>
 <body>
@@ -74,6 +74,6 @@
       src="https://kit.fontawesome.com/7161175c87.js"
       crossorigin="anonymous"
     ></script>
-    <script src="index_script.js"></script>
+    <script src="dist/index_script.js"></script>
 </body>
 </html>
